<resources>
    <string name="app_name">Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Здоровье школьника</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_raspisanie">Расписание</string>
    <string name="menu_shagomer">Шагомер</string>
    <string name="menu_razminka">Разминка</string>
    <string name="menu_pitanie">Питание</string>
</resources>